# Climber_Vision_2026

./: .gitignore  CMakeLists.txt  README.md  readme.md
configs/: test.yaml  test_buff.yaml
io/: CMakeLists.txt  camera.cpp
io/gimbal/: gimbal.cpp
src/: infantry.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  tracker.cpp  tracker.hpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp  buff_aimer.hpp  buff_detector.cpp
test/: auto_aim_test.cpp  auto_buff_test.cpp
